commons update to 0.0.26
This commit updates the Confluence plugin to commons 0.0.26
including the following changes:
- API modifications required as commons definition
- DELETE directory no throws ServiceUnavailableException on sync error
- replaced sun's List class by native java.util class in BackupServiceTest.java