@@ -17,7 +17,6 @@ import com.atlassian.confluence.util.longrunning.LongRunningTaskId;
 import com.atlassian.confluence.util.longrunning.LongRunningTaskManager;
 import com.atlassian.core.task.longrunning.LongRunningTask;
 import com.atlassian.event.api.EventPublisher;
-import com.sun.tools.javac.util.List;
 import de.aservo.confapi.commons.exception.BadRequestException;
 import de.aservo.confapi.commons.exception.InternalServerErrorException;
 import de.aservo.confapi.commons.exception.NotFoundException;
@@ -39,8 +38,10 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URI;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.Enumeration;
+import java.util.List;
 import java.util.Optional;
 import java.util.Properties;
 import java.util.UUID;
@@ -479,7 +480,7 @@ public class BackupServiceTest {
                 PROPERTY_SPACE_KEY, SPACE_KEY);
         final InputStream propertiesInputStream = new ByteArrayInputStream(propertiesString.getBytes());
 
-        final List<ZipEntry> zipEntries = List.of(zipEntryExportDescriptorProperties, zipEntryEntitiesXml);
+        final List<ZipEntry> zipEntries = Arrays.asList(zipEntryExportDescriptorProperties, zipEntryEntitiesXml);
         final Enumeration<ZipEntry> zipEntryEnumeration = Collections.enumeration(zipEntries);
         doReturn(zipEntryEnumeration).when(zipFile).entries();
         doReturn(propertiesInputStream).when(zipFile).getInputStream(zipEntryExportDescriptorProperties);
@@ -502,7 +503,7 @@ public class BackupServiceTest {
             }
         };
 
-        final List<ZipEntry> zipEntries = List.of(zipEntryExportDescriptorProperties);
+        final List<ZipEntry> zipEntries = Arrays.asList(zipEntryExportDescriptorProperties);
         final Enumeration<ZipEntry> zipEntryEnumeration = Collections.enumeration(zipEntries);
         doReturn(zipEntryEnumeration).when(zipFile).entries();
         doReturn(emptyInputStream).when(zipFile).getInputStream(zipEntryExportDescriptorProperties);
@@ -517,7 +518,7 @@ public class BackupServiceTest {
         final ZipEntry zipEntryEntitiesXml = mock(ZipEntry.class);
         doReturn(FILE_ENTITIES_XML).when(zipEntryEntitiesXml).getName();
 
-        final List<ZipEntry> zipEntries = List.of(zipEntryEntitiesXml);
+        final List<ZipEntry> zipEntries = Arrays.asList(zipEntryEntitiesXml);
         final Enumeration<ZipEntry> zipEntryEnumeration = Collections.enumeration(zipEntries);
         doReturn(zipEntryEnumeration).when(zipFile).entries();
 
@@ -533,7 +534,7 @@ public class BackupServiceTest {
         final ZipEntry zipEntryExportDescriptorProperties = mock(ZipEntry.class);
         doReturn(FILE_EXPORT_DESCRIPTOR_PROPERTIES).when(zipEntryExportDescriptorProperties).getName();
 
-        final List<ZipEntry> zipEntries = List.of(zipEntryExportDescriptorProperties, zipEntryEntitiesXml);
+        final List<ZipEntry> zipEntries = Arrays.asList(zipEntryExportDescriptorProperties, zipEntryEntitiesXml);
         final Enumeration<ZipEntry> zipEntryEnumeration = Collections.enumeration(zipEntries);
         doReturn(zipEntryEnumeration).when(zipFile).entries();
         doThrow(new IOException("Exception")).when(zipFile).getInputStream(zipEntryExportDescriptorProperties);
